Modify favicon and manifest references in index.html
Updated favicon and manifest link in index.html.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Drift connects international students, travelers, and workers with people from home. Find your community, chat with locals nearby, and get instant help from Surf AI assistant.">
     <meta name="keywords" content="international students app, travel social network, homesickness solution, AI chat assistant, find people from home, student community app, expat network, surf ai" />
     <link rel="canonical" href="https://web.driftnet.live">
+    
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -29,7 +30,8 @@
     <link rel="apple-touch-icon" sizes="120x120" href="./assets/img/drift_logo.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/drift_logo.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/drift_logo.png">
-    <link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+    <link rel="icon" href="./assets/img/drift_logo.png">
+    <link rel="manifest" href="./assets/img/drift_logo.png">
     <link rel="mask-icon" href="./assets/img/drift_logo.png" color="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
