Update download link to the App Store

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         </h1>
                         <p class="lead mb-4 mb-lg-5">Drift connects international students, travelers, and workers with their home communities. Find people nearby from your country, join global interest groups, and get instant help from Surf AI—your personal assistant that understands where you're from.</p>
                         <div>
-                            <a href="#" class="btn btn-dark btn-download-app mb-xl-0 mr-2 mr-md-3">
+                            <a href="https://apps.apple.com/us/app/drift-network/id6754312142" class="btn btn-dark btn-download-app mb-xl-0 mr-2 mr-md-3">
                                 <span class="d-flex align-items-center">
                                     <span class="icon icon-brand mr-2 mr-md-3"><span class="fab fa-apple"></span></span>
                                     <span class="d-inline-block text-left">
