Update download link for Drift app to App Store

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         <h2 class="display-3 mb-4">Get Started in Seconds</h2>
                         <p class="lead text-muted">Download Drift and instantly connect with people from home. Join global communities, discover people nearby from your country, and chat with Surf AI—your personal assistant who understands where you're from.</p>
                         <div class="mt-4 mt-lg-5">
-                            <a href="#" class="btn btn-dark btn-download-app mb-xl-0 mr-2 mr-md-3">
+                            <a href="https://apps.apple.com/us/app/drift-network/id6754312142" class="btn btn-dark btn-download-app mb-xl-0 mr-2 mr-md-3">
                                 <span class="d-flex align-items-center">
                                     <span class="icon icon-brand mr-2 mr-md-3"><span class="fab fa-apple"></span></span>
                                     <span class="d-inline-block text-left">
