Resize Founder University logo in index.html
Increased the size of the Founder University logo and added padding.

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <div class="col d-flex justify-content-center flex-wrap">
                         <a href="#" aria-label="Founder University" class="icon icon-xl icon-dark mx-auto"
                         data-toggle="tooltip" data-placement="top" title="Founder University">
-                            <img src="assets/img/clients/FounderUniversityLogo.webp" class="mx-auto d-block" style="max-width: 120px; max-height: 120px;" alt="Founder University Logo">
+                            <img src="assets/img/clients/FounderUniversityLogo.webp" class="mx-auto d-block" style="max-width: 300px; max-height: 300px; padding-bottom: 20px;" alt="Founder University Logo">
                         </a>
                     </div>
                 </div>
