--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </h1>
                         <p class="lead mb-4 mb-lg-5">Connect with people from home, join global communities, and get instant help from Surf AI. Available for individuals and organizations worldwide.</p>
                         <div>
-                            <a href="#" class="btn btn-dark btn-download-app mb-2 mr-2 mr-md-3">
+                            <a href="https://apps.apple.com/us/app/drift-network/id6754312142" class="btn btn-dark btn-download-app mb-2 mr-2 mr-md-3">
                                 <span class="d-flex align-items-center">
                                     <span class="icon icon-brand mr-2 mr-md-3"><span class="fab fa-apple"></span></span>
                                     <span class="d-inline-block text-left">
@@ -365,7 +365,7 @@
                                         <p class="lead mb-3">Host private mini-events with up to 20 participants! Create temporary copies of Drift with Surf AI for birthday parties, game nights, study sessions, hangouts, and more. Perfect for a few hours of connected fun.</p>
                                         <p class="text-muted mb-4">Your temporary Drift includes all the features you love, custom context for Surf AI, and automatic cleanup when your event ends.</p>
                                         <div class="mt-3">
-                                            <a href="#" class="btn btn-dark btn-download-app mb-2 mr-2">
+                                            <a href="https://apps.apple.com/us/app/drift-network/id6754312142" class="btn btn-dark btn-download-app mb-2 mr-2">
                                                 <span class="d-flex align-items-center">
                                                     <span class="icon icon-brand mr-2"><span class="fab fa-apple"></span></span>
                                                     <span class="d-inline-block text-left">
@@ -704,7 +704,7 @@
                         <p>The Drift consumer app connects you with people from your home country or state within 10 miles. Join global interest-based communities, from football to finance, tech to food.</p>
                         <p>With Surf AI as your personal assistant, get instant answers, recommendations, and introductions to people who share your background and interests.</p>
                         <div class="mt-4">
-                            <a href="#" class="btn btn-dark btn-download-app mb-2 mr-2">
+                            <a href="https://apps.apple.com/us/app/drift-network/id6754312142" class="btn btn-dark btn-download-app mb-2 mr-2">
                                 <span class="d-flex align-items-center">
                                     <span class="icon icon-brand mr-2"><span class="fab fa-apple"></span></span>
                                     <span class="d-inline-block text-left">
@@ -899,7 +899,7 @@
                             </a>
                             <div class="mt-3">
                                 <p class="text-muted mb-2">Or try the consumer app:</p>
-                                <a href="#" class="btn btn-dark btn-download-app mb-2 mr-2">
+                                <a href="https://apps.apple.com/us/app/drift-network/id6754312142" class="btn btn-dark btn-download-app mb-2 mr-2">
                                     <span class="d-flex align-items-center">
                                         <span class="icon icon-brand mr-2"><span class="fab fa-apple"></span></span>
                                         <span class="d-inline-block text-left">
