--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <header class="header-global" id="home">
         <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-light navbar-theme-secondary">
             <div class="container position-relative">
-                <a class="navbar-brand mr-lg-4" href="./index.html">
+                <a class="navbar-brand mr-lg-4" href="./">
                     <img class="navbar-brand-dark" src="./assets/img/drift_logo.png" alt="Drift Logo">
                     <img class="navbar-brand-light" src="./assets/img/drift_logo.png" alt="Drift Logo">
                 </a>
@@ -221,7 +221,7 @@
                     <div class="navbar-collapse-header">
                         <div class="row">
                             <div class="col-6 collapse-brand">
-                                <a href="./index.html">
+                                <a href="./">
                                     <img src="./assets/img/drift_logo.png" alt="Drift Logo">
                                 </a>
                             </div>
