--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                             <span class="fas fa-calendar-check fa-3x"></span>
                                         </div>
                                         <p class="font-weight-bold mb-1">Up to 20 People</p>
-                                        <p class="text-muted">Perfect for intimate gatherings</p>
+                                        <p class="text-muted">Perfect for small gatherings</p>
                                     </div>
                                 </div>
                             </div>
